# btmesh

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: rust.yml
btmesh-bearer/: Cargo.toml
btmesh-bearer/src/: beacon.rs  error.rs  lib.rs
btmesh-common/: Cargo.toml
btmesh-common/src/: lib.rs  opcode.rs
btmesh-common/src/address/: group_address.rs  mod.rs  unicast_address.rs  virtual_address.rs
btmesh-common/src/crc/: mod.rs
btmesh-common/src/crypto/: application.rs  device.rs  mod.rs  network.rs  nonce.rs  provisioning.rs  secrets.rs
btmesh-common/src/location/: mod.rs
btmesh-common/src/mic/: mod.rs
btmesh-device/: Cargo.toml
btmesh-device/src/: access_counted.rs  lib.rs
btmesh-driver/: Cargo.toml
btmesh-driver/src/: dispatch.rs  error.rs  fmt.rs  lib.rs  network.rs  secrets.rs  watchdog.rs
btmesh-driver/src/device/: mod.rs
btmesh-driver/src/interface/: mod.rs
btmesh-driver/src/interface/advertising/: mod.rs
btmesh-driver/src/interface/advertising/segmentation/: inbound.rs  mod.rs  outbound.rs
btmesh-driver/src/interface/gatt/: mod.rs
btmesh-driver/src/lower/: inbound_segmentation.rs  mod.rs
btmesh-driver/src/models/: mod.rs
btmesh-driver/src/models/configuration/: app_key.rs  beacon.rs  composition_data.rs  default_ttl.rs  mod.rs  model_app.rs  model_publication.rs  model_subscription.rs  node_reset.rs  relay.rs
btmesh-driver/src/network/: mod.rs  replay_protection.rs
btmesh-driver/src/provisioned/: mod.rs  sequence.rs  system.rs  transmit_queue.rs
btmesh-driver/src/provisioned/lower/: inbound_segmentation.rs  mod.rs  outbound_segmentation.rs
btmesh-driver/src/provisioned/network/: mod.rs  replay_protection.rs
btmesh-driver/src/provisioned/secrets/: application.rs  device.rs  mod.rs  network.rs
btmesh-driver/src/provisioned/upper/: mod.rs
btmesh-driver/src/secrets/: application.rs  device.rs  mod.rs  network.rs
btmesh-driver/src/stack/: mod.rs
btmesh-driver/src/stack/interface/: mod.rs
btmesh-driver/src/stack/interface/advertising/: mod.rs
btmesh-driver/src/stack/interface/advertising/segmentation/: inbound.rs  mod.rs
btmesh-driver/src/stack/interface/gatt/: mod.rs
btmesh-driver/src/stack/provisioned/: mod.rs  sequence.rs  system.rs  transmit_queue.rs
btmesh-driver/src/stack/provisioned/lower/: inbound_segmentation.rs  mod.rs  outbound_segmentation.rs
btmesh-driver/src/stack/provisioned/network/: mod.rs  network_message_cache.rs  replay_protection.rs
btmesh-driver/src/stack/provisioned/secrets/: application.rs  mod.rs  network.rs
btmesh-driver/src/stack/provisioned/upper/: mod.rs
btmesh-driver/src/stack/unprovisioned/: auth_value.rs  mod.rs  phases.rs  provisionee.rs  provisioner.rs  transcript.rs
btmesh-driver/src/storage/: flash.rs  memory.rs  mod.rs  provisioned.rs  unprovisioned.rs
btmesh-driver/src/storage/provisioned/: bindings.rs  mod.rs  publications.rs  subscriptions.rs
btmesh-driver/src/storage/provisioned/foundation/: configuration.rs  mod.rs
btmesh-driver/src/unprovisioned/: auth_value.rs  mod.rs  pdu.rs  provisionee.rs  provisioning.rs  transcript.rs
btmesh-driver/src/upper/: mod.rs
btmesh-driver/src/util/: access_counted.rs  deadline.rs  hash.rs  mod.rs
btmesh-macro/: Cargo.toml
btmesh-macro/src/: lib.rs
btmesh-macro/tests/: macros.rs
btmesh-models/: Cargo.toml
btmesh-models/src/: lib.rs  opcode.rs
btmesh-models/src/foundation/: mod.rs
btmesh-models/src/foundation/configuration/: app_key.rs  beacon.rs  composition_data.rs  default_ttl.rs  mod.rs  model_app.rs  model_publication.rs  model_subscription.rs  network_transmit.rs  node_reset.rs  relay.rs
btmesh-models/src/generic/: battery.rs  level.rs  mod.rs  onoff.rs
btmesh-models/src/sensor/: mod.rs
btmesh-nrf-softdevice/: Cargo.toml
btmesh-nrf-softdevice/examples/basic/: Cargo.toml  memory.x  memusage.sh
btmesh-nrf-softdevice/examples/basic/.cargo/: config  config.toml
btmesh-nrf-softdevice/examples/basic/src/: device.rs  dummy.rs  main.rs
btmesh-nrf-softdevice/examples/microbit/basic/: Cargo.toml  memory.x  memusage.sh
btmesh-nrf-softdevice/examples/microbit/basic/.cargo/: config.toml
btmesh-nrf-softdevice/examples/microbit/basic/src/: device.rs  main.rs
btmesh-nrf-softdevice/examples/nrf52840-dk/basic/: Cargo.toml  memory.x
btmesh-nrf-softdevice/examples/nrf52840-dk/basic/src/: main.rs
btmesh-nrf-softdevice/src/: advertising.rs  driver.rs  gatt.rs  lib.rs  rng.rs
btmesh-pdu/: Cargo.toml
btmesh-pdu/src/: access.rs  control.rs  lib.rs  lower.rs  network.rs  proxy.rs  upper.rs
btmesh-pdu/src/lower/: access.rs  control.rs  mod.rs
btmesh-pdu/src/provisioned/: access.rs  control.rs  mod.rs  network.rs
btmesh-pdu/src/provisioned/lower/: access.rs  control.rs  mod.rs
btmesh-pdu/src/provisioned/upper/: access.rs  control.rs  mod.rs
btmesh-pdu/src/provisioning/: advertising.rs  mod.rs
btmesh-pdu/src/provisioning/generic/: mod.rs
btmesh-pdu/src/upper/: access.rs  control.rs  mod.rs
