[workspace]
members = [
    "btmesh-bearer",
    "btmesh-common",
    "btmesh-device",
    "btmesh-driver",
    "btmesh-macro",
    "btmesh-models",
    "btmesh-pdu",
]

resolver = "2"

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "5790985f9fdfe80fe543a08b91ab5917b5e94d72" }
embassy-util = { git = "https://github.com/embassy-rs/embassy.git", rev = "5790985f9fdfe80fe543a08b91ab5917b5e94d72" }
