[workspace]
members = [
    "btmesh-bearer",
    "btmesh-common",
    "btmesh-device",
    "btmesh-driver",
    "btmesh-macro",
    "btmesh-models",
    "btmesh-pdu",
]

resolver = "2"

[patch.crates-io]
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "be55d2a39eb399d693d11f37dfa4b87cd2bd3c7a" }
embassy-util = { git = "https://github.com/embassy-rs/embassy.git", rev = "be55d2a39eb399d693d11f37dfa4b87cd2bd3c7a" }
