[workspace]
members = [
    "btmesh-bearer",
    "btmesh-common",
    "btmesh-device",
    "btmesh-driver",
    "btmesh-macro",
    "btmesh-models",
    "btmesh-pdu",
]

resolver = "2"

[patch.crates-io]
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "529535194d4b5d58b31fd6a7541176105e3c63f7" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "529535194d4b5d58b31fd6a7541176105e3c63f7" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", rev = "529535194d4b5d58b31fd6a7541176105e3c63f7" }
