[package]
name = "btmesh-bearer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btmesh-common = { path = "../btmesh-common" }
btmesh-pdu = { path = "../btmesh-pdu" }
heapless = "0.7"
defmt = {version = "0.3.0", optional = true }

[features]
defmt = [
    "dep:defmt",
]
