[package]
name = "btmesh-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = { version = "0.7", default-features = false }
ccm = { version = "0.4.4", default-features = false }
cmac = { version = "0.6.0", default-features = false }
heapless = { version = "=0.7.13", features = ["defmt-impl"] }
hash32 = {version = "0.2.1" }
hash32-derive = "0.1.1"
rand_core = { version = "0.6.2", default-features = false }
#logging
log = { version = "0.4", optional = true }
defmt = { version = "0.3", optional = true }
serde = { version = "1.0", default-features = false, features=[ "derive" ], optional = true}
