[package]
name = "btmesh-device"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.7"
btmesh-common = { path = "../btmesh-common"}
btmesh-models = { path = "../btmesh-models"}
embassy-sync = { version = "0.1.0", default-features = false }
embassy-time = { version = "0.1.0", default-features = false }
embassy-futures = { version = "0.1.0", default-features = false }
futures = { version = "0.3.21", default-features = false }

#logging
log = { version = "0.4", optional = true }
defmt = { version = "0.3", optional = true }

[features]
defmt = [
    "dep:defmt",
    "heapless/defmt-impl",
]
