[package]
name = "btmesh-driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btmesh-common = { path = "../btmesh-common" }
btmesh-pdu = { path = "../btmesh-pdu" }
btmesh-bearer = { path = "../btmesh-bearer" }
btmesh-device = { path = "../btmesh-device" }
btmesh-models = { path = "../btmesh-models", features = [ "serde" ] }
btmesh-macro = { path = "../btmesh-macro"}
embassy-executor = { version = "0.1.0", default-features = false, features = ["nightly", "time"] }
embassy-util = { version = "0.1.0", default-features = false, features = ["nightly"] }
heapless = "=0.7.13"
hash32 = "0.2.1"
hash32-derive = "0.1.1"
uluru = "3.0.0"
serde = { version = "1.0", default-features = false, optional = true }
cmac = { version = "0.6.0", default-features = false }
aes = { version = "0.7", default-features = false }
p256 = { version = "0.10.0", default-features = false, features = ["ecdh"] }
rand_core = { version = "0.6.2", default-features = false }
embedded-storage-async = { version = "0.3.0", optional = true }
embedded-storage = { version = "0.3.0", optional = true }
postcard = { version = "1.0.1", optional = true }
defmt = { version = "0.3", optional = true }


[dev-dependencies]
rand_core = { version = "0.6.2", default-features = false, features = ["getrandom"] }
embassy-executor = { version = "0.1.0", default-features = false, features = ["time", "std" ] }

[features]
default = [
    "flash",
    "memory",
    "embassy-executor/std",
    "relay",
]
flash = [
    "embedded-storage",
    "embedded-storage-async",
    "postcard",
    "postcard/use-defmt",
    "serde/derive",
    "btmesh-common/serde",
    "btmesh-pdu/serde"
]
memory = [

]
defmt = [
    "dep:defmt",
    "btmesh-common/defmt",
    "btmesh-bearer/defmt",
    "btmesh-device/defmt",
    "btmesh-models/defmt",
    "btmesh-pdu/defmt",
]

relay = [
    "btmesh-common/relay",
    "btmesh-models/relay",
]
proxy = [
    "btmesh-common/proxy",
]
friend = [
    "btmesh-common/friend",
]
low_power = [
    "btmesh-common/low_power",
]
