[package]
name = "btmesh-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.89", features = ["full", "extra-traits"] }
quote = "1.0.7"
proc-macro2 = "1.0.24"
