[package]
name = "btmesh-macro"
version = "0.1.0"
edition = "2021"
resolver = "2"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
btmesh-common = { path = "../btmesh-common", default-features = false, features = ["darling"]}
syn = { version = "1.0.89", features = ["derive", "full", "extra-traits"] }
quote = "1.0.7"
darling = "0.14.1"
proc-macro2 = "1.0.24"
regex = "1.6.0"
prettyplease = "0.1.18"
