[package]
name = "btmesh-models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btmesh-common = { path = "../btmesh-common"}
serde = { version = "1.0", default-features = false, features = [ "derive"], optional = true}
defmt = { version = "0.3", optional = true }
micromath = { version = "2.0" }
heapless = "0.7"

[features]
relay = []


