[workspace]
# none, due to architecture target

[package]
name = "btmesh-nrf-softdevice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btmesh-common = { path = "../btmesh-common" }
btmesh-pdu = { path = "../btmesh-pdu" }
btmesh-bearer = { path = "../btmesh-bearer" }
btmesh-driver = { path = "../btmesh-driver", default-features=false, features = [ "flash" ] }
btmesh-device = { path = "../btmesh-device" }
heapless = "=0.7.13"
atomic-polyfill = "0.1.8"
rand_core = { version = "0.6.2", default-features = false }
embassy-util = { version = "0.1.0", default-features = false, features = ["nightly" ] }
nrf-softdevice = { version = "0.1.0", features = ["ble-peripheral", "ble-gatt-server"] }
nrf-softdevice-s140 = { version = "0.1.0", optional=true }
nrf-softdevice-macro = { version = "0.1.0" }
defmt = { version = "0.3", optional = true }
embassy-nrf = { version = "0.1.0", default-features = false, features = ["time-driver-rtc1", "gpiote"], optional = true }
embassy-time = { version = "0.1.0", default-features = false }

[features]
default = [
    "nrf52840"
]

nrf52840 = [
    "embassy-nrf/nrf52840",
    "nrf-softdevice/nrf52840",
    "nrf-softdevice/ble-central",
    "nrf-softdevice/s140",
    "nrf-softdevice-s140",
]

nrf52833 = [
    "embassy-nrf/nrf52833",
    "nrf-softdevice/nrf52833",
    "nrf-softdevice/ble-central",
    "nrf-softdevice/s140",
    "nrf-softdevice-s140",
]

defmt = [
    "dep:defmt",
    "btmesh-driver/defmt",
#    "nrf-softdevice/defmt",
]

gatt = [
]

relay = [
    "btmesh-common/relay",
    "btmesh-driver/relay",
]
proxy = [
    "btmesh-common/proxy",
    "gatt",
]
friend = [
    "btmesh-common/friend"
]
low_power = [
    "btmesh-common/low_power"
]

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "be55d2a39eb399d693d11f37dfa4b87cd2bd3c7a" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "be55d2a39eb399d693d11f37dfa4b87cd2bd3c7a" }
embassy-util = { git = "https://github.com/embassy-rs/embassy.git", rev = "be55d2a39eb399d693d11f37dfa4b87cd2bd3c7a" }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy.git", rev = "be55d2a39eb399d693d11f37dfa4b87cd2bd3c7a" }
nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice/", rev = "e1e4e2a2c2e9a8243368214fac02532e79c127a8" }
nrf-softdevice-s140 = { git = "https://github.com/embassy-rs/nrf-softdevice/", rev = "e1e4e2a2c2e9a8243368214fac02532e79c127a8" }
nrf-softdevice-macro = { git = "https://github.com/embassy-rs/nrf-softdevice/", rev = "e1e4e2a2c2e9a8243368214fac02532e79c127a8" }
