[workspace]
# none, due to architecture target

[package]
name = "btmesh-nrf-softdevice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btmesh-common = { path = "../btmesh-common", default-features = false }
btmesh-pdu = { path = "../btmesh-pdu", default-features = false }
btmesh-bearer = { path = "../btmesh-bearer", default-features = false }
btmesh-driver = { path = "../btmesh-driver", default-features = false, features = [
  "flash",
] }
btmesh-device = { path = "../btmesh-device", default-features = false }
heapless = "0.7"
atomic-polyfill = { version = "1", default-features = false }
rand_core = { version = "0.6.2", default-features = false }
embassy-sync = { version = "0.2.0", default-features = false, features = [
  "nightly",
] }
embassy-futures = { version = "0.1.0", default-features = false }
nrf-softdevice = { version = "0.1.0", default-features = false, features = [
  "ble-peripheral",
  "ble-gatt-server",
] }
nrf-softdevice-s140 = { version = "0.1.0", optional = true }
nrf-softdevice-macro = { version = "0.1.0" }
defmt = { version = "0.3", optional = true }
embassy-nrf = { version = "0.1.0", default-features = false, features = [
  "time-driver-rtc1",
  "gpiote",
], optional = true }
embassy-time = { version = "0.1.0", default-features = false }

[features]
default = ["nrf52840"]

nrf52840 = [
  "embassy-nrf/nrf52840",
  "nrf-softdevice/nrf52840",
  "nrf-softdevice/ble-central",
  "nrf-softdevice/s140",
  "nrf-softdevice-s140",
]

nrf52833 = [
  "embassy-nrf/nrf52833",
  "nrf-softdevice/nrf52833",
  "nrf-softdevice/ble-central",
  "nrf-softdevice/s140",
  "nrf-softdevice-s140",
]

defmt = [
  "dep:defmt",
  "btmesh-driver/defmt",
  #    "nrf-softdevice/defmt",
]

gatt = []

relay = ["btmesh-common/relay", "btmesh-driver/relay"]
proxy = ["btmesh-common/proxy", "gatt"]
friend = ["btmesh-common/friend"]
low_power = ["btmesh-common/low_power"]

[patch.crates-io]
embassy-nrf = { git = "https://github.com/embassy-rs/embassy.git", rev = "37a1e9f971214c11a614b06b230be27c688fff1d" }
nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice/", rev = "3b3eabb5383ae16a7772924f5301e6a79d0a591f" }
nrf-softdevice-s140 = { git = "https://github.com/embassy-rs/nrf-softdevice/", rev = "3b3eabb5383ae16a7772924f5301e6a79d0a591f" }
nrf-softdevice-macro = { git = "https://github.com/embassy-rs/nrf-softdevice/", rev = "3b3eabb5383ae16a7772924f5301e6a79d0a591f" }
