[package]
name = "btmesh-pdu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

heapless = "=0.7.13"
defmt = { version = "0.3.1", optional = false }
btmesh-common = { path = "../btmesh-common", features = ["defmt" ]}
serde = { version = "1.0", features = ["derive"] }
