[package]
name = "btmesh-pdu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

heapless = "0.7"
defmt = { version = "0.3.1", optional = true }
btmesh-common = { path = "../btmesh-common", features = ["defmt" ]}
p256 = { version = "0.10.0", default-features = false, features = [ "arithmetic" ] }
serde = { version = "1.0", default-features = false, features = [ "derive"], optional = true}

[features]
defmt = [
    "dep:defmt",
]



