[package]
authors = [
    "Ulf Lilleengen <lulf@redhat.com>",
    "Bob McWhirter <bmcwhirt@redhat.com>"
]
edition = "2018"
name = "basic"
version = "0.1.0"
description = "nrf52840-dk Bluetooth Mesh example"
keywords = ["ble", "bluetooth", "mesh", "nrf", "nrf52" ]
resolver = "2"

[workspace]

[dependencies]
defmt = { version = "0.3" }
defmt-rtt = { version = "0.3" }
panic-probe = { version = "0.3", features = ["print-defmt"] }

embassy-executor = { version = "0.1.1", default-features = false, features = [ "defmt", "nightly", "integrated-timers" ] }
embassy-time = { version = "0.1.0", default-features = false, features = [ "defmt", "defmt-timestamp-uptime" ] }
embassy-nrf = { version = "0.1.0", default-features = false, features = ["nrf52840", "gpiote", "time-driver-rtc1"]}
embassy-futures = { version = "0.1.0", default-features = false }


cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
btmesh-models = { path = "../../../../btmesh-models"}
btmesh-device = { path = "../../../../btmesh-device"}
btmesh-macro = { path = "../../../../btmesh-macro"}
btmesh-nrf-softdevice = { path = "../../../", features = ["defmt", "nrf52840", "proxy", "relay"] }

[features]

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 'z'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = 2
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = 0
debug-assertions = false
opt-level = 1 
overflow-checks = false

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", tag = "embassy-executor-v0.1.1" }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy.git", tag = "embassy-time-v0.1.0" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", tag = "embassy-time-v0.1.0" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", tag = "embassy-time-v0.1.0" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", tag = "embassy-time-v0.1.0" }
nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice/", rev = "8f9895f82069c8f4e388f5b92a50ccb6c2652be5" }
nrf-softdevice-s140 = { git = "https://github.com/embassy-rs/nrf-softdevice/", rev = "8f9895f82069c8f4e388f5b92a50ccb6c2652be5" }
nrf-softdevice-macro = { git = "https://github.com/embassy-rs/nrf-softdevice/", rev = "8f9895f82069c8f4e388f5b92a50ccb6c2652be5" }
